--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "highcharts-vue": "^1.3.5",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "vue": "^2.6.11",
